# browsergame

./: pyproject.toml
config/: settings.py
map/: api.py  models.py  schemas.py  urls.py
