[tool.poetry]
name = "browsergame"
version = "0.1.0"
description = "A browser game that uses django-ninja framework."
authors = ["Shizuku-Asami"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
django-ninja = "^0.17.0"
Pillow = "^9.0.1"
django-environ = "^0.8.1"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
